--- a/tracking.html
+++ b/tracking.html
@@ -85,5 +85,10 @@
         </div>
       </div>
     </div>
+    <script>
+      const url = new URL(window.location.href);
+      console.log(url.searchParams.get("orderId"));
+      console.log(url.searchParams.get("productId"));
+    </script>
   </body>
 </html>
